[package]
name = "rustanoid"
version = "0.1.0"
authors = ["Bruno Romero de Azevedo <brunordea@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.14.0", features = ["nightly"] }

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
